--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout>
   <div class="bg-sky-700 px-4 py-2 text-white hover:bg-sky-800 sm:px-8 sm:py-3">
-    test 12345
+    test 123
   </div>
-  <h1>test 12345</h1>
+  <h1>test 123123123</h1>
 </Layout>
