--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,8 +3,5 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-  <div class="bg-sky-700 px-4 py-2 text-white hover:bg-sky-800 sm:px-8 sm:py-3">
-    test 123
-  </div>
-  <h1>test 123123123</h1>
+  <div></div>
 </Layout>
