--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,27 @@
-h1 {
-  border: 2px solid red;
+.link-hover {
+  position: relative;
+
+  @mixin line-base {
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: var(--color-black);
+    transition: all 0.4s ease;
+    content: '';
+    transform: scaleX(0);
+  }
+
+  // 預設黑字 hover
+  &::before {
+    @include line-base;
+  }
+
+  // 統一 hover
+  &:hover {
+    &::before {
+      transform: scaleX(1);
+    }
+  }
 }
