--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import '../styles/tailwind.css';
 import '../styles/global.scss';
 import Header from './Header.astro';
+import Footer from './Footer.astro';
 ---
 
 <!doctype html>
@@ -31,8 +32,8 @@ import Header from './Header.astro';
   </head>
   <body>
     <Header />
-
     <slot />
+    <Footer />
   </body>
 </html>
 
