--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -24,18 +24,31 @@ header {
       }
     }
   }
+
+  // desktop nav active effect
+  nav.hidden {
+    ul li {
+      &:active {
+        background-color: var(--color-light-gray);
+      }
+    }
+  }
+
+  // mobile nav active effect
+  nav.block {
+    &:active {
+      background-color: var(--color-light-gray);
+    }
+  }
 }
 
 $menu-item: 4;
 $menu-height: 73px;
 
 .mobile-content {
-  position: fixed;
   top: $menu-height;
   left: 0;
   z-index: 999;
-  overflow: hidden;
-  width: 100%;
   height: 0;
   transition:
     all 0.4s ease-out,
@@ -43,9 +56,6 @@ $menu-height: 73px;
   transition-delay: 0.2s;
 
   ul li {
-    padding-bottom: 8px;
-    margin-top: 8px;
-    margin-bottom: 8px;
     opacity: 0;
     transition:
       transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99),
@@ -56,6 +66,20 @@ $menu-height: 73px;
       &:nth-child(#{$i}) {
         transition-delay: #{0.56 - ($i * 0.07)}s;
       }
+    }
+
+    &:active {
+      background-color: var(--color-light-gray);
+    }
+  }
+
+  .social-box {
+    opacity: 0;
+    transition: all 0.5s ease;
+    transition-delay: 0.5s;
+
+    a:active {
+      background-color: var(--color-light-gray);
     }
   }
 
@@ -71,6 +95,18 @@ $menu-height: 73px;
           transition-delay: #{0.07 * $i + 0.2}s;
         }
       }
+    }
+
+    .social-box {
+      opacity: 1;
+    }
+  }
+}
+
+footer {
+  .social-box {
+    a:active {
+      background-color: var(--color-light-gray);
     }
   }
 }
