fix: detail fixed

--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -22,18 +22,26 @@ import YtIcon from '../assets/images/yt-icon.svg';
     <!-- desktop nav -->
     <nav class="hidden lg:block">
       <ul class="flex items-center gap-5 text-lg font-medium">
-        <li class="p-3">
+        <li>
           <!-- 當前頁面加入text-primary變色 -->
-          <a class="text-primary" href="/yoyogo/"> 抽獎登錄 </a>
+          <a class="p-3" href="/yoyogo/">
+            <span class="text-primary">抽獎登錄</span>
+          </a>
         </li>
-        <li class="p-3">
-          <a class="link-hover" href="/yoyogo/detail"> 活動辦法 </a>
+        <li>
+          <a class="p-3" href="/yoyogo/detail">
+            <span class="link-hover">活動辦法</span>
+          </a>
         </li>
-        <li class="p-3">
-          <a class="link-hover" href="/yoyogo/privacy"> 個資蒐集同意條款 </a>
+        <li>
+          <a class="p-3" href="/yoyogo/privacy">
+            <span class="link-hover">個資蒐集同意條款</span>
+          </a>
         </li>
-        <li class="p-3">
-          <a class="link-hover" href="#" target="_blank"> 購買 eSIM </a>
+        <li>
+          <a class="p-3" href="#" target="_blank">
+            <span class="link-hover">購買 eSIM</span>
+          </a>
         </li>
       </ul>
     </nav>
@@ -56,18 +64,24 @@ import YtIcon from '../assets/images/yt-icon.svg';
 >
   <div class="container flex h-full flex-col justify-between">
     <ul class="mt-10 flex flex-col">
-      <li class="px-6 py-6">
+      <li>
         <!-- 當前頁面加入text-primary變色 -->
-        <a class="text-primary" href="/yoyogo/"> 抽獎登錄 </a>
+        <a class="text-primary block px-6 py-6" href="/yoyogo/"> 抽獎登錄 </a>
       </li>
-      <li class="px-6 py-6">
-        <a class="link-hover" href="/yoyogo/detail"> 活動辦法 </a>
+      <li>
+        <a class="block px-6 py-6" href="/yoyogo/detail">
+          <span class="link-hover">活動辦法</span>
+        </a>
       </li>
-      <li class="px-6 py-6">
-        <a class="link-hover" href="/yoyogo/privacy"> 個資蒐集同意條款 </a>
+      <li>
+        <a class="block px-6 py-6" href="/yoyogo/privacy">
+          <span class="link-hover">個資蒐集同意條款</span>
+        </a>
       </li>
-      <li class="px-6 py-6">
-        <a class="link-hover" href="#" target="_blank"> 購買 eSIM </a>
+      <li>
+        <a class="block px-6 py-6" href="#" target="_blank">
+          <span class="link-hover">購買 eSIM</span>
+        </a>
       </li>
     </ul>
 
