--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,7 +44,7 @@ import Footer from './Footer.astro';
     margin: 0;
     font-size: 16px;
     font-family: 'Noto Sans', sans-serif;
-    color: var(--color-black);
+    color: var(--color-dark-gray);
     background-color: var(--color-white);
   }
 
