--- a/src/pages/detail.astro
+++ b/src/pages/detail.astro
@@ -12,10 +12,17 @@ import Layout from '../layouts/Layout.astro';
       <article>
         <h2>一、 活動期間</h2>
         <p>自西元 202X 年 X 月 X 日 00:00 起至 202X 年 X 月 X 日 23:59 止。</p>
+      </article>
+
+      <article>
+        <h2>二、 活動參加方式</h2>
+        <p>於活動期間內，完成以下步驟即可獲得抽獎資格：</p>
         <ol>
           <li>
             步驟一：
-            <p>例如，登入會員並填寫正確個人資料</p>
+            <p>
+              例如，登入會員並填寫正確個人資料例如，登入會員並填寫正確個人資料例如，登入會員並填寫正確個人資料例如，登入會員並填寫正確個人資料例如，登入會員並填寫正確個人資料例如，登入會員並填寫正確個人資料例如，登入會員並填寫正確個人資料例如，登入會員並填寫正確個人資料例如，登入會員並填寫正確個人資料例如，登入會員並填寫正確個人資料例如，登入會員並填寫正確個人資料例如，登入會員並填寫正確個人資料
+            </p>
           </li>
           <li>
             步驟二：
@@ -26,11 +33,6 @@ import Layout from '../layouts/Layout.astro';
             <p>例如，登入會員並填寫正確個人資料</p>
           </li>
         </ol>
-      </article>
-
-      <article>
-        <h2>二、 活動參加方式</h2>
-        <p>於活動期間內，完成以下步驟即可獲得抽獎資格：</p>
       </article>
 
       <article>
