--- a/src/pages/privacy.astro
+++ b/src/pages/privacy.astro
@@ -31,7 +31,7 @@ import Layout from '../layouts/Layout.astro';
           <li>
             中獎後提供：
             <p>
-              身分證字號、戶籍地址、收件地址、身分證正反面影本（依稅法規定使用）。
+              身分證字號、戶籍地址、收件地址、身分證正反面影本（依稅法規定使用）。身分證字號、戶籍地址、收件地址、身分證正反面影本（依稅法規定使用）。身分證字號、戶籍地址、收件地址、身分證正反面影本（依稅法規定使用）。身分證字號、戶籍地址、收件地址、身分證正反面影本（依稅法規定使用）。身分證字號、戶籍地址、收件地址、身分證正反面影本（依稅法規定使用）。身分證字號、戶籍地址、收件地址、身分證正反面影本（依稅法規定使用）。
             </p>
           </li>
         </ol>
