update: link update

--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -39,7 +39,7 @@ import YtIcon from '../assets/images/yt-icon.svg';
           </a>
         </li>
         <li>
-          <a class="p-3" href="#" target="_blank">
+          <a class="p-3" href="https://yoyogoshop.com/" target="_blank">
             <span class="link-hover">購買 eSIM</span>
           </a>
         </li>
@@ -79,7 +79,11 @@ import YtIcon from '../assets/images/yt-icon.svg';
         </a>
       </li>
       <li>
-        <a class="block px-6 py-6" href="#" target="_blank">
+        <a
+          class="block px-6 py-6"
+          href="https://yoyogoshop.com/"
+          target="_blank"
+        >
           <span class="link-hover">購買 eSIM</span>
         </a>
       </li>
